First pass at current projections

--- a/site_resources/matches.ipynb
+++ b/site_resources/matches.ipynb
@@ -4,28 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['c:\\\\Users\\\\Graeham\\\\Documents\\\\GITHUB_PROJECTS\\\\grieman.github.io\\\\site_resources',\n",
-       " 'c:\\\\Users\\\\Graeham\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python310\\\\python310.zip',\n",
-       " 'c:\\\\Users\\\\Graeham\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python310\\\\DLLs',\n",
-       " 'c:\\\\Users\\\\Graeham\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python310\\\\lib',\n",
-       " 'c:\\\\Users\\\\Graeham\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python310',\n",
-       " '',\n",
-       " 'c:\\\\Users\\\\Graeham\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python310\\\\lib\\\\site-packages',\n",
-       " 'c:\\\\Users\\\\Graeham\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python310\\\\lib\\\\site-packages\\\\win32',\n",
-       " 'c:\\\\Users\\\\Graeham\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python310\\\\lib\\\\site-packages\\\\win32\\\\lib',\n",
-       " 'c:\\\\Users\\\\Graeham\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python310\\\\lib\\\\site-packages\\\\Pythonwin',\n",
-       " 'c:\\\\Users\\\\Graeham\\\\Documents\\\\GITHUB_PROJECTS\\\\Rugby_ELO']"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "import yaml\n",
@@ -36,12 +15,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "from player_club_classes import team_elo, Player, Club, Match\n",
-    "from player_club_classes import GLOBAL_home_advantage, GLOBAL_score_factor, GLOBAL_k, GLOBAL_mov_score_add, GLOBAL_mov_score_mult, GLOBAL_mov_elo_mult, GLOBAL_mov_elo_add\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import plotly.express as px\n",
@@ -69,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,11 +63,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "month = match_df[(match_df.year == 2022) & (match_df.month == 5)]\n",
+    "month = match_df[(match_df.year == 2022) & (match_df.month == 7)]\n",
     "closest_games = month.sort_values('lineup_spread',  key=abs).head()\n",
     "\n",
     "sorted_pred_accuracy = month.assign(tmp=month[\"point_diff\"] - month[\"lineup_spread\"]).sort_values(by=\"tmp\", key=abs)#.drop(columns=\"tmp\")\n",
@@ -102,13 +80,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Player' object has no attribute 'elo_df'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\graeh\\Documents\\grieman.github.io\\site_resources\\matches.ipynb Cell 7'\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/graeh/Documents/grieman.github.io/site_resources/matches.ipynb#ch0000006?line=0'>1</a>\u001b[0m player_elo_list \u001b[39m=\u001b[39m []\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/graeh/Documents/grieman.github.io/site_resources/matches.ipynb#ch0000006?line=1'>2</a>\u001b[0m \u001b[39mfor\u001b[39;00m player_name, player \u001b[39min\u001b[39;00m playerbase\u001b[39m.\u001b[39mitems():\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/graeh/Documents/grieman.github.io/site_resources/matches.ipynb#ch0000006?line=2'>3</a>\u001b[0m     player_elo \u001b[39m=\u001b[39m player\u001b[39m.\u001b[39;49melo_df\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/graeh/Documents/grieman.github.io/site_resources/matches.ipynb#ch0000006?line=3'>4</a>\u001b[0m     player_elo[\u001b[39m'\u001b[39m\u001b[39mFull Name\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m player_name[\u001b[39m0\u001b[39m]\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/graeh/Documents/grieman.github.io/site_resources/matches.ipynb#ch0000006?line=4'>5</a>\u001b[0m     player_elo[\u001b[39m'\u001b[39m\u001b[39mUnicode_ID\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m player_name[\u001b[39m1\u001b[39m]\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'Player' object has no attribute 'elo_df'"
+     ]
+    }
+   ],
    "source": [
     "player_elo_list = []\n",
     "for player_name, player in playerbase.items():\n",
-    "    player_elo = player.elo_df\n",
+    "    player_elo = pd.DataFrame(player.elo_list, columns = [\n",
+    "        'Number', 'Full_Name', 'Team', 'Player', 'Position', 'Tries',\n",
+    "        'Try Assists', 'Conversion Goals', 'Penalty Goals',\n",
+    "        'Drop Goals Converted', 'Points', 'Passes', 'Runs', 'Meters Run',\n",
+    "        'Clean Breaks', 'Defenders Beaten', 'Offload', 'Turnovers Conceded',\n",
+    "        'Tackles', 'Missed Tackles', 'Lineouts Won', 'Penalties Conceded',\n",
+    "        'Yellow Cards', 'Red Cards', 'espn_id_num', 'Competition', 'Date',\n",
+    "        'Home Team', 'Home Score', 'Away Team', 'Away Score', 'Minutes',\n",
+    "        'Position_Number', 'gameid', 'Unicode_ID', 'start_elo', 'end_elo'\n",
+    "       ])\n",
     "    player_elo['Full Name'] = player_name[0]\n",
     "    player_elo['Unicode_ID'] = player_name[1]\n",
     "    player_elo_list.append(player_elo)\n",
@@ -116,6 +115,8 @@
     "player_elo = pd.concat(player_elo_list).reset_index(drop=True)\n",
     "player_elo = pd.merge(player_elo, team_colors, on = 'Team', how = 'left')\n",
     "player_elo['elo_change'] = player_elo.end_elo - player_elo.start_elo\n",
+    "player_elo.Date = pd.to_datetime(player_elo.Date)\n",
+    "\n",
     "player_elo['week_num'] = player_elo['Date'].dt.isocalendar().week\n",
     "player_elo['month'] = player_elo['Date'].dt.month\n",
     "player_elo['year'] = player_elo['Date'].dt.year"
@@ -585,7 +586,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.5 64-bit",
+   "display_name": "Python 3.10.4 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -599,12 +600,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.4"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "67a733b7962f8af59d042652146f23f4699488dc054cf1a64c9a8ede9a0c416f"
+    "hash": "0f1516c099a61bd76220bbf2e59233284c44652fa392a0b70cf121052b4721ba"
    }
   }
  },
