First pass at player tables

--- a/site_resources/matches.ipynb
+++ b/site_resources/matches.ipynb
@@ -63,56 +63,362 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "match_list = []\n",
+    "for _, match in matchlist.items():\n",
+    "    match_list.append({key:val for key, val in vars(match).items()})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "future_games = [x for x in match_list if 'point_diff' not in x.keys()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Number</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>elo</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Keita Inagaki</td>\n",
+       "      <td>95.693948</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>Atsushi Sakate</td>\n",
+       "      <td>103.016034</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>Asaeli Ai Valu</td>\n",
+       "      <td>109.901054</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>4.0</td>\n",
+       "      <td>Warner Dearns</td>\n",
+       "      <td>81.632401</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>Sanaila Waqa</td>\n",
+       "      <td>98.572695</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>6.0</td>\n",
+       "      <td>Michael Leitch</td>\n",
+       "      <td>111.575428</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>7.0</td>\n",
+       "      <td>Ben Gunter</td>\n",
+       "      <td>74.382303</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>8.0</td>\n",
+       "      <td>Jack Cornelsen</td>\n",
+       "      <td>100.25964</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>9.0</td>\n",
+       "      <td>Naoto Saito</td>\n",
+       "      <td>77.317966</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>Seungsin Lee</td>\n",
+       "      <td>78.591693</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>11.0</td>\n",
+       "      <td>Siosaia Fifita</td>\n",
+       "      <td>74.326031</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>12.0</td>\n",
+       "      <td>Shogo Nakano</td>\n",
+       "      <td>77.407979</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>13.0</td>\n",
+       "      <td>Dylan Riley</td>\n",
+       "      <td>81.078527</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>14.0</td>\n",
+       "      <td>Gerhard van den Heever</td>\n",
+       "      <td>97.958843</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>15.0</td>\n",
+       "      <td>Ryohei Yamanaka</td>\n",
+       "      <td>105.641678</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>16.0</td>\n",
+       "      <td>Shota Horie</td>\n",
+       "      <td>100.605033</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>17.0</td>\n",
+       "      <td>Yukio Morikawa</td>\n",
+       "      <td>79.429971</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>18.0</td>\n",
+       "      <td>Yusuke Kizu</td>\n",
+       "      <td>81.98869</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>19.0</td>\n",
+       "      <td>Takayasu Tsuji</td>\n",
+       "      <td>80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>20.0</td>\n",
+       "      <td>Tevita Tatafu</td>\n",
+       "      <td>104.821511</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>21.0</td>\n",
+       "      <td>Kaito Shigeno</td>\n",
+       "      <td>99.664607</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>22.0</td>\n",
+       "      <td>Yu Tamura</td>\n",
+       "      <td>105.351957</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>23.0</td>\n",
+       "      <td>Shane Gates</td>\n",
+       "      <td>83.191635</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "home_team_name                                 South Africa\n",
-       "away_team_name                                        Wales\n",
-       "name                     South Africa V Wales on 2022/07/08\n",
-       "date                                    2022-07-08 17:05:00\n",
-       "competition                   International Test Match 2022\n",
-       "GLOBAL_home_advantage                                     0\n",
-       "GLOBAL_score_factor                                      10\n",
-       "GLOBAL_k                                                 20\n",
-       "GLOBAL_mov_score_add                                      1\n",
-       "GLOBAL_mov_score_mult                                   2.2\n",
-       "GLOBAL_mov_elo_add                                      2.2\n",
-       "GLOBAL_mov_elo_mult                                   0.001\n",
-       "lineup_home_elo                                 1583.617972\n",
-       "lineup_away_elo                                 1618.951372\n",
-       "lineup_elo_diff                                    -35.3334\n",
-       "lineup_spread                                      -3.53334\n",
-       "lineup_prediction                                  0.479672\n",
-       "home_elo                                                NaN\n",
-       "away_elo                                                NaN\n",
-       "elo_diff                                                NaN\n",
-       "spread                                                  NaN\n",
-       "prediction                                              NaN\n",
-       "home_score                                              NaN\n",
-       "away_score                                              NaN\n",
-       "point_diff                                              NaN\n",
-       "spread_weighted_diff                                    NaN\n",
-       "mov_mod                                                 NaN\n",
-       "elo_change                                              NaN\n",
-       "week_num                                                 27\n",
-       "month                                                     7\n",
-       "year                                                   2022\n",
-       "Name: 11038, dtype: object"
+       "   Number                    Name         elo\n",
+       "7     1.0           Keita Inagaki   95.693948\n",
+       "8     2.0          Atsushi Sakate  103.016034\n",
+       "9     3.0          Asaeli Ai Valu  109.901054\n",
+       "10    4.0           Warner Dearns   81.632401\n",
+       "13    5.0            Sanaila Waqa   98.572695\n",
+       "12    6.0          Michael Leitch  111.575428\n",
+       "21    7.0              Ben Gunter   74.382303\n",
+       "20    8.0          Jack Cornelsen   100.25964\n",
+       "11    9.0             Naoto Saito   77.317966\n",
+       "6    10.0            Seungsin Lee   78.591693\n",
+       "5    11.0          Siosaia Fifita   74.326031\n",
+       "4    12.0            Shogo Nakano   77.407979\n",
+       "3    13.0             Dylan Riley   81.078527\n",
+       "2    14.0  Gerhard van den Heever   97.958843\n",
+       "0    15.0         Ryohei Yamanaka  105.641678\n",
+       "19   16.0             Shota Horie  100.605033\n",
+       "22   17.0          Yukio Morikawa   79.429971\n",
+       "17   18.0             Yusuke Kizu    81.98869\n",
+       "16   19.0          Takayasu Tsuji          80\n",
+       "15   20.0           Tevita Tatafu  104.821511\n",
+       "14   21.0           Kaito Shigeno   99.664607\n",
+       "18   22.0               Yu Tamura  105.351957\n",
+       "1    23.0             Shane Gates   83.191635"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "## Projections\n",
-    "future_games = match_df[match_df.point_diff.isna()]\n",
-    "future_game = future_games.iloc[1]\n",
-    "future_game"
+    "future_game = future_games[0]\n",
+    "\n",
+    "home_team = pd.DataFrame(future_game['home_team'][:, [0,1, -1]], columns = ['Number', 'Name', 'elo'])\n",
+    "away_team = pd.DataFrame(future_game['away_team'][:, [0,1, -1]], columns = ['Number', 'Name', 'elo'])\n",
+    "home_team = home_team.sort_values('Number')\n",
+    "away_team = away_team.sort_values('Number')\n",
+    "home_team"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tabulate import tabulate\n",
+    "home_table = tabulate(home_team, tablefmt=\"pipe\", headers=\"keys\", showindex=False)\n",
+    "away_table = tabulate(away_team, tablefmt=\"pipe\", headers=\"keys\", showindex=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "|    |   Number | Name                   |      elo |\n",
+      "|---:|---------:|:-----------------------|---------:|\n",
+      "|  7 |        1 | Keita Inagaki          |  95.6939 |\n",
+      "|  8 |        2 | Atsushi Sakate         | 103.016  |\n",
+      "|  9 |        3 | Asaeli Ai Valu         | 109.901  |\n",
+      "| 10 |        4 | Warner Dearns          |  81.6324 |\n",
+      "| 13 |        5 | Sanaila Waqa           |  98.5727 |\n",
+      "| 12 |        6 | Michael Leitch         | 111.575  |\n",
+      "| 21 |        7 | Ben Gunter             |  74.3823 |\n",
+      "| 20 |        8 | Jack Cornelsen         | 100.26   |\n",
+      "| 11 |        9 | Naoto Saito            |  77.318  |\n",
+      "|  6 |       10 | Seungsin Lee           |  78.5917 |\n",
+      "|  5 |       11 | Siosaia Fifita         |  74.326  |\n",
+      "|  4 |       12 | Shogo Nakano           |  77.408  |\n",
+      "|  3 |       13 | Dylan Riley            |  81.0785 |\n",
+      "|  2 |       14 | Gerhard van den Heever |  97.9588 |\n",
+      "|  0 |       15 | Ryohei Yamanaka        | 105.642  |\n",
+      "| 19 |       16 | Shota Horie            | 100.605  |\n",
+      "| 22 |       17 | Yukio Morikawa         |  79.43   |\n",
+      "| 17 |       18 | Yusuke Kizu            |  81.9887 |\n",
+      "| 16 |       19 | Takayasu Tsuji         |  80      |\n",
+      "| 15 |       20 | Tevita Tatafu          | 104.822  |\n",
+      "| 14 |       21 | Kaito Shigeno          |  99.6646 |\n",
+      "| 18 |       22 | Yu Tamura              | 105.352  |\n",
+      "|  1 |       23 | Shane Gates            |  83.1916 |\n",
+      "|    |   Number | Name               |      elo |\n",
+      "|---:|---------:|:-------------------|---------:|\n",
+      "|  5 |        1 | Jean-Baptiste Gros | 114.835  |\n",
+      "|  6 |        2 | Peato Mauvaka      | 108.294  |\n",
+      "|  7 |        3 | Demba Bamba        | 106.964  |\n",
+      "|  8 |        4 | Thibaud Flament    |  91.3623 |\n",
+      "|  0 |        5 | Thomas Jolmes      |  93.8563 |\n",
+      "|  9 |        6 | Dylan Cretin       |  89.5152 |\n",
+      "| 20 |        7 | Charles Ollivon    | 124.007  |\n",
+      "| 11 |        8 | Yoan Tanga         | 103.367  |\n",
+      "|  4 |        9 | Maxime Lucu        |  88.4409 |\n",
+      "|  3 |       10 | Matthieu Jalibert  | 110.789  |\n",
+      "|  2 |       11 | Matthis Lebel      |  88.1638 |\n",
+      "|  1 |       12 | Yoram Moefana      |  83.9963 |\n",
+      "| 19 |       13 | Virimi Vakatawa    | 117.642  |\n",
+      "| 21 |       14 | Damian Penaud      | 106.633  |\n",
+      "| 22 |       15 | Max Spring         |  83.4149 |\n",
+      "| 12 |       16 | Pierre Bourgarit   | 104.391  |\n",
+      "| 13 |       17 | Dany Priso         | 104.041  |\n",
+      "| 14 |       18 | Sipili Falatea     | 102.637  |\n",
+      "| 15 |       19 | Thomas Lavault     |  86.7407 |\n",
+      "| 16 |       20 | Ibrahim Diallo     |  76.6319 |\n",
+      "| 17 |       21 | Sekou Macalou      | 114.735  |\n",
+      "| 18 |       22 | Baptiste Couilloud | 118.945  |\n",
+      "| 10 |       23 | Antoine Hastoy     |  94.7028 |\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'<table><tr><th>Home Team </th><th>Away Team</th></tr><tr><td>None</td><td>None</td></tr> </table>'"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f'<table><tr><th>Home Team </th><th>Away Team</th></tr><tr><td>{home_table}</td><td>{away_table}</td></tr> </table>'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "|    |   Number | Name                   |      elo |\\n|---:|---------:|:-----------------------|---------:|\\n|  7 |        1 | Keita Inagaki          |  95.6939 |\\n|  8 |        2 | Atsushi Sakate         | 103.016  |\\n|  9 |        3 | Asaeli Ai Valu         | 109.901  |\\n| 10 |        4 | Warner Dearns          |  81.6324 |\\n| 13 |        5 | Sanaila Waqa           |  98.5727 |\\n| 12 |        6 | Michael Leitch         | 111.575  |\\n| 21 |        7 | Ben Gunter             |  74.3823 |\\n| 20 |        8 | Jack Cornelsen         | 100.26   |\\n| 11 |        9 | Naoto Saito            |  77.318  |\\n|  6 |       10 | Seungsin Lee           |  78.5917 |\\n|  5 |       11 | Siosaia Fifita         |  74.326  |\\n|  4 |       12 | Shogo Nakano           |  77.408  |\\n|  3 |       13 | Dylan Riley            |  81.0785 |\\n|  2 |       14 | Gerhard van den Heever |  97.9588 |\\n|  0 |       15 | Ryohei Yamanaka        | 105.642  |\\n| 19 |       16 | Shota Horie            | 100.605  |\\n| 22 |       17 | Yukio Morikawa         |  79.43   |\\n| 17 |       18 | Yusuke Kizu            |  81.9887 |\\n| 16 |       19 | Takayasu Tsuji         |  80      |\\n| 15 |       20 | Tevita Tatafu          | 104.822  |\\n| 14 |       21 | Kaito Shigeno          |  99.6646 |\\n| 18 |       22 | Yu Tamura              | 105.352  |\\n|  1 |       23 | Shane Gates            |  83.1916 |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<table><tr><th>Home Team </th><th>Away Team</th></tr><tr><td>\n",
+    "|   Number | Name                   |      elo |\\n|---:|---------:|:-----------------------|---------:|\\n|  7 |        1 | Keita Inagaki          |  95.6939 |\\n|  8 |        2 | Atsushi Sakate         | 103.016  |\\n|  9 |        3 | Asaeli Ai Valu         | 109.901  |\\n| 10 |        4 | Warner Dearns          |  81.6324 |\\n| 13 |        5 | Sanaila Waqa           |  98.5727 |\\n| 12 |        6 | Michael Leitch         | 111.575  |\\n| 21 |        7 | Ben Gunter             |  74.3823 |\\n| 20 |        8 | Jack Cornelsen         | 100.26   |\\n| 11 |        9 | Naoto Saito            |  77.318  |\\n|  6 |       10 | Seungsin Lee           |  78.5917 |\\n|  5 |       11 | Siosaia Fifita         |  74.326  |\\n|  4 |       12 | Shogo Nakano           |  77.408  |\\n|  3 |       13 | Dylan Riley            |  81.0785 |\\n|  2 |       14 | Gerhard van den Heever |  97.9588 |\\n|  0 |       15 | Ryohei Yamanaka        | 105.642  |\\n| 19 |       16 | Shota Horie            | 100.605  |\\n| 22 |       17 | Yukio Morikawa         |  79.43   |\\n| 17 |       18 | Yusuke Kizu            |  81.9887 |\\n| 16 |       19 | Takayasu Tsuji         |  80      |\\n| 15 |       20 | Tevita Tatafu          | 104.822  |\\n| 14 |       21 | Kaito Shigeno          |  99.6646 |\\n| 18 |       22 | Yu Tamura              | 105.352  |\\n|  1 |       23 | Shane Gates            |  83.1916 |\n",
+    "</td><td>\n",
+    "|    |   Number | Name               |      elo |\\n|---:|---------:|:-------------------|---------:|\\n|  5 |        1 | Jean-Baptiste Gros | 114.835  |\\n|  6 |        2 | Peato Mauvaka      | 108.294  |\\n|  7 |        3 | Demba Bamba        | 106.964  |\\n|  8 |        4 | Thibaud Flament    |  91.3623 |\\n|  0 |        5 | Thomas Jolmes      |  93.8563 |\\n|  9 |        6 | Dylan Cretin       |  89.5152 |\\n| 20 |        7 | Charles Ollivon    | 124.007  |\\n| 11 |        8 | Yoan Tanga         | 103.367  |\\n|  4 |        9 | Maxime Lucu        |  88.4409 |\\n|  3 |       10 | Matthieu Jalibert  | 110.789  |\\n|  2 |       11 | Matthis Lebel      |  88.1638 |\\n|  1 |       12 | Yoram Moefana      |  83.9963 |\\n| 19 |       13 | Virimi Vakatawa    | 117.642  |\\n| 21 |       14 | Damian Penaud      | 106.633  |\\n| 22 |       15 | Max Spring         |  83.4149 |\\n| 12 |       16 | Pierre Bourgarit   | 104.391  |\\n| 13 |       17 | Dany Priso         | 104.041  |\\n| 14 |       18 | Sipili Falatea     | 102.637  |\\n| 15 |       19 | Thomas Lavault     |  86.7407 |\\n| 16 |       20 | Ibrahim Diallo     |  76.6319 |\\n| 17 |       21 | Sekou Macalou      | 114.735  |\\n| 18 |       22 | Baptiste Couilloud | 118.945  |\\n| 10 |       23 | Antoine Hastoy     |  94.7028 |\n",
+    "</td></tr> </table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<table><tr><th>Table 1 Heading 1 </th><th>Table 1 Heading 2</th></tr><tr><td>\n",
+    "\n",
+    "|Table 1| Middle | Table 2|\n",
+    "|--|--|--|\n",
+    "|a| not b|and c |\n",
+    "\n",
+    "</td><td>\n",
+    "\n",
+    "|b|1|2|3| \n",
+    "|--|--|--|--|\n",
+    "|a|s|d|f|\n",
+    "\n",
+    "</td></tr> </table>"
    ]
   },
   {
