Added projections for matches without lineups

--- a/reviews/2022-10-08-Racing92-Pau.md
+++ b/reviews/2022-10-08-Racing92-Pau.md
@@ -4,6 +4,8 @@ title: Pau at Racing 92; 13-26
 date: 2022-10-08 17:00:00 18:00:00 -0500  
 categories: match review  
 ---
+# Pau (1220.94) at Racing 92 (1341.37)
+
 # Prediction: Racing 92 by 17.0
 
 
